--- a/app1-basics/index.html
+++ b/app1-basics/index.html
@@ -1,7 +1,10 @@
-<html>
-	<body>
-	
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+<html ng-app = 'template'>
+	<body style="background-color:{{text}}">
+
+		<input ng-model="text">
+		{{text}}
+
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 		<script src="app.js"></script>
 		<script src="controller.js"></script>
 		<script src="service.js"></script>
