--- a/app4-api/index.html
+++ b/app4-api/index.html
@@ -1,6 +1,6 @@
-<html ng-app="apiApp">
-	<body>
-		
+<html ng-app= 'starwars'>
+	<body ng-controller = 'mainCtrl'>
+		{{ships}}
 				<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 		<script src="app.js"></script>
 		<script src="controller.js"></script>
